--- a/projects/estate-frontend/public/index.html
+++ b/projects/estate-frontend/public/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Land Token Verification</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Land Token Verification & Transfer</h1>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <section id="auth-section">
+      <h2>1. Authenticate</h2>
+      <button onclick="getAccessToken()">Get Access Token</button>
+      <p id="token-display"></p>
+    </section>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <section id="docs-section" style="display:none;">
+      <h2>2. User Documents</h2>
+      <button onclick="fetchDocuments()">Fetch Documents</button>
+      <ul id="document-list"></ul>
+    </section>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    <section id="action-section" style="display:none;">
+      <h2>3. Land Actions</h2>
+      <button onclick="createAsset()">Create Verification Asset</button>
+      <button onclick="transferOwnership()">Transfer Ownership</button>
+      <p id="status"></p>
+    </section>
+  </div>
+
+  <!-- 👇 THIS is how you link the JavaScript -->
+  <script src="script.js"></script>
+</body>
 </html>
